--- a/index.html
+++ b/index.html
@@ -19,26 +19,38 @@
 <body>
 <div class="container">
 	<div class="introduction">
-		<h1>Hello, I'm Lisa</h1>
-		<p>
-			I am a senior studying Graphic Design with a Computer Science minor at the University of Illinois at Urbana-Champaign.
-			<br>
-			I design experiences at where analog meets digital and I am currently on a quest to find the perfect cat sweater.
-		</p>
-		<div class="links">
-			<hr>
-			<h2>Drop me a line; I don't bite</h2>
-			<a href="mailto: hello.lisavuong@gmail.com" >hello.lisavuong@gmail.com</a>
-			<br>
-			<a href="lisavuong.pdf">resume</a> // <a href="dribble.com/lisavuong">dribble</a>
-			
-			<div class="icons">
+		<div class="content">
+			<h1>Hello, I'm Lisa</h1>
+			<p>
+				I am a senior studying Graphic Design with a Computer Science minor at the University of Illinois at Urbana-Champaign.
+				<br>
+				I design experiences at where analog meets digital and I am currently on a quest to find the perfect cat sweater.
+			</p>
+			<div class="links">
+				<hr>
+				<h2>Drop me a line; I don't bite</h2>
+				<a href="mailto: hello.lisavuong@gmail.com" >hello.lisavuong@gmail.com</a>
+				<br>
+				<a href="lisavuong.pdf">resume</a> // <a href="dribble.com/lisavuong">dribble</a>
+				
+				<div class="icons">
 
-			</div>
+				</div>
+			</div>	
 		</div>
 	</div>	
 	<div class="work">
+		<div class="section section-1">
+			<div class="content">
+				<div class="project-number">Project 1/12</div>
+				<h1>RetailMeNot Internship</h1>
+			</div>
+			
+			<div class="slider">
+				<img src="http://placehold.it/900x700">
+			</div>
 
+		</div>
 	</div>
 </div>
 </body>
