almost done with the first page!

--- a/index.html
+++ b/index.html
@@ -26,14 +26,28 @@
 				<br>
 				I design experiences at where analog meets digital and I am currently on a quest to find the perfect cat sweater.
 			</p>
-			<div class="links">
-				<hr>
-				<h2>Drop me a line; I don't bite</h2>
-				<a href="mailto: hello.lisavuong@gmail.com" >hello.lisavuong@gmail.com</a>
+			<div class="line">
+				<h2>Drop me a line; I don't bite:</h2>
+				<a href="mailto: hello.lisavuong@gmail.com" >hello.lisavuong@gmail.com</a> 
 				<br>
 				<a href="lisavuong.pdf">resume</a> // <a href="dribble.com/lisavuong">dribble</a>
-				
-				<div class="icons">
+			</div>
+
+			<div class="links">
+				<hr>
+				<span class="connect">
+					<a href="instagram.com/lisavuong"><img class="icons" src="img/instagram.png"> iPhoneography</a> 
+					<a href="twitter.com/lisavuong"><img class="icons" src="img/twitter.png"> Late Night Tweets</a>
+					<a href="spotify.com/lisavuong"><img class="icons" src="img/spotify.png">Soundtrack to my Life</a>
+					<a href="linkedin.com/lisavuong"><img class="icons" src="img/linkedin.png">Good Ol' Networking</a>
+				</span>
+
+				<h2>Currently, I am:</h2>
+				<span class="currently">
+					<img class="icons" src="img/book.png">Reading <a href="book">Blink</a>
+					<img class="icons" src="img/headphones.png">Listening to <a href="book">Wait Wait, Don't Tell Me</a>
+					<img class="icons" src="img/controller.png">Playing <a href="book">Steven Universe RPG </a>
+				</span>
 
 				</div>
 			</div>	
