first section basically done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="content">
 			<h1>Hello, I'm Lisa</h1>
 			<p>
-				I am a senior studying Graphic Design with a Computer Science minor at the University of Illinois at Urbana-Champaign.
+				I am currently a senior studying Graphic Design with a Computer Science minor at the University of Illinois at Urbana-Champaign.
 				<br>
 				I design experiences at where analog meets digital and I am currently on a quest to find the perfect cat sweater.
 			</p>
@@ -35,8 +35,9 @@
 
 			<div class="links">
 				<hr>
+				<h2>Connect with me:</h2>
 				<span class="connect">
-					<a href="instagram.com/lisavuong"><img class="icons" src="img/instagram.png"> iPhoneography</a> 
+					<a href="instagram.com/lisavuong"><img class="icons" src="img/instagram.png"> iPhone-ography</a> 
 					<a href="twitter.com/lisavuong"><img class="icons" src="img/twitter.png"> Late Night Tweets</a>
 					<a href="spotify.com/lisavuong"><img class="icons" src="img/spotify.png">Soundtrack to my Life</a>
 					<a href="linkedin.com/lisavuong"><img class="icons" src="img/linkedin.png">Good Ol' Networking</a>
@@ -52,6 +53,8 @@
 				</div>
 			</div>	
 		</div>
+		<a class="old-link" href="lisavuong.com/old-site.html">Visit my old website</a>
+		<a class="view-work" href="">View my Work</a>
 	</div>	
 	<div class="work">
 		<div class="section section-1">
@@ -61,7 +64,7 @@
 			</div>
 			
 			<div class="slider">
-				<img src="http://placehold.it/900x700">
+				<img src="http://placehold.it/800x600">
 			</div>
 
 		</div>
