--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
+	
 <body>
 <div class="container">
 	<div class="introduction">
@@ -61,12 +62,41 @@
 			<div class="content">
 				<div class="project-number">Project 1/12</div>
 				<h1>RetailMeNot Internship</h1>
-			</div>
+				<div class="spec-container">
+					<div class="specs">
+						<span class="keyword">Project Type</span>
+							iOS App
+							<br>
+							Website
+							<br>
+							Apple Watch App
+					</div>
+					<div class="specs">
+						<span class="keyword">My Role</span>
+							Product Design
+							<br>
+							Visual and UI Design
+							<br>
+							UX Design & Testing
+					</div>
+					<div class="specs keyword-with-hackillinois">
+							<span class="keyword">With</span>
+							<a href="" target="_blank">Morgan Edgerton</a>
+							<br>
+							<a href="http://chelseachoi.com/" target="_blank">Yuanzhe Fan</a>
+					</div>
+				</div>
 			
-			<div class="slider">
-				<img src="http://placehold.it/800x600">
-			</div>
+				<p class="description">
+					I interned at RetailMeNot during summer 2015 in Austin, Texas. Besides learning how to stay cool in the intense heat, I learned a lot through being able to work on a variety of projects.
+				</p>
+				<p class="description">
+					RetailMeNot is focused on saving people money through providing users with coupons and deals online and local. 
+				</p>
 
+				<span class="more"> <img class="arrow" src="img/arrow.png"> <a class href=""> See case study </a> </span>
+
+			</div>
 		</div>
 	</div>
 </div>
